fixed itemtype alignment

--- a/style.css
+++ b/style.css
@@ -557,7 +557,7 @@ body {
 
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-row-gap: 10px;
     margin: 50px;
     width: 300px;
     height: 400px;
@@ -572,13 +572,11 @@ body {
 .namecard {
     grid-area: 2 / 1 / 3 / 2;
     font-size: 2em;
-    margin-top: 10px;
 
 }
 .regioncard {
     grid-area: 2 / 2 / 3 / 3;
     background-color: var(--primary);
-    margin-top: 10px;
     padding-left: 30px;
     padding-right: 30px;
     height: 30px;
